fixing bug related to z-index of cards

--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ body {
     /*border: 2px solid black;*/
     perspective: 100px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    z-index: 2;
+    z-index: 1;
 }
 
 .cardQ .q {
@@ -228,7 +228,7 @@ body {
     color: rgba(255, 255, 255, 0.8);
     position: absolute;
     bottom: 5px;
-    right: 10px;
+    right: 10px; 
     user-select: none;
 }
 
@@ -249,7 +249,7 @@ body {
     transform: rotate3d(0, 1, 0, 180deg);
     perspective: 100px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-
+    z-index: 0;
 }
 
 .cardA .a {
